Fixed captcha code too wide in chrome

--- a/jquery.realperson.css
+++ b/jquery.realperson.css
@@ -9,6 +9,10 @@
 	font-weight: bold;
 	letter-spacing: -1px;
 	line-height: 3px;
+	  /* for chrome */
+  -bracket-:hack(;
+      letter-spacing: -4px;
+  );
 }
 .realperson-regen {
 	padding-top: 4px;
